<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelPaterno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelMaterno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu1"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelSexo">

            <AutoCompleteTextView
                android:id="@+id/atvSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelHijos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHijos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelSueldo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSueldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelDireccion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu2"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelDistrito">

            <AutoCompleteTextView
                android:id="@+id/atvDistrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/btnGrabar"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/botonGrabar"
                    android:text="GRABAR"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/save" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/btnSalir"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/botonSalir"
                    android:text="SALIR"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/undo" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>